# example_blinky_43xx_dual_core

./: CMakeLists.txt  README.md
cmake/: common_build.cmake  common_settings.cmake  toolchain-gcc-arm-embedded.cmake
src/m0/: CMakeLists.txt
src/m4/: CMakeLists.txt
tests/: CMakeLists.txt  demo.test.c
